<resources>
    <string name="app_name">PA</string>
    <string name="network_not_available">Network error.\nPlease approach our CC staff for further assistance.</string>
    <string name="starting_kiosk">Kiosk is starting. Please wait…</string>
    <string name="cannot_connect_server">No connection.\nPlease approach our CC staff for further assistance.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="cepas">CEPAS</string>
    <string name="credit_contactless">Credit Contactless</string>
    <string name="credit_card">Credit Card</string>
    <string name="cup">CUP</string>
    <string name="nets_debit">NETS Debit</string>
    <string name="nets">NETS</string>
    <string name="nets_flashpay">NETS FlashPay</string>
    <string name="ezl_card">EZ-Link</string>
    <string name="nfp_card">NETS NFP</string>
    <string name="scheme_credit">Scheme Credit</string>
    <string name="nets_debit_card">NETS EFT</string>
    <string name="help">Help</string>
    <string name="cart">Cart</string>
    <string name="home_title">What\'s Happening at %s</string>
    <string name="cart_title">My Cart</string>
    <string name="particular_title">My Particulars</string>
    <string name="payment_successful_title">Payment Successful</string>
    <string name="cart_summary_title">Cart Summary</string>
    <string name="payment_summary_title">Payment Summary</string>
    <string name="view_all">View all at %s ></string>
    <string name="find_your_next_experience">Find your next experience here</string>
    <string name="courses">Courses</string>
    <string name="facilities">Facilities</string>
    <string name="events">Events</string>
    <string name="find_courses">Find courses, eg. Cooking Class</string>
    <string name="find_location">Find location</string>
    <string name="refine_your_search">Refine your Search</string>
    <string name="search_results">Search Results</string>
    <string name="search_your_courses">Search your Courses</string>
    <string name="search_your_events">Search your Events</string>
    <string name="search_your_courses_hint">Enter keywords or code no.</string>
    <string name="search_facilities_hint">eg. Badminton</string>
    <string name="search_event_hint">Enter keywords or code no.</string>
    <string name="search_ig_hint">Enter keywords or code no.</string>
    <string name="advanced_search_event_hint">Enter keywords or event code number</string>
    <string name="specify_location">Specify venue locations</string>
    <string name="preferred_venue">Search preferred venue</string>
    <string name="location">Locations</string>
    <string name="near_by">Nearby</string>
    <string name="specify_proximity">Sort nearby location</string>
    <string name="distance">Select distance</string>
    <string name="select_your_courses_category">Select your Courses Category</string>
    <string name="choose_your_price_range">Choose your price range</string>
    <string name="free">Free</string>
    <string name="max_price">$300</string>
    <string name="fee_from">from</string>
    <string name="select_start_date">Select start date</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="suitable_for">Suitable for</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="time_title">Date</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="class_schedule_title">Class Schedule</string>
    <string name="schedule_title">Schedule</string>
    <string name="session_title">No. of Sessions</string>
    <string name="venue_title">Venue</string>
    <string name="registration_close_date_title">Registration Close Date</string>
    <string name="registration_closing_date">Registration Closing Date</string>
    <string name="class_requirement_title">Class Requirements</string>
    <string name="class_remarks_title">Remarks</string>
    <string name="maximum_participants_title">Maximum Class Size</string>
    <string name="maximum_event_size_title">Maximum Event Size</string>
    <string name="add_to_card">Add to Cart</string>
    <string name="book_now">Book Now</string>
    <string name="register_now">Register Now</string>
    <string name="remove_course">You can only register one item per session.\n Do you want to remove your previous item from your cart and replace with the new one?</string>
    <string name="oops">Oops!</string>
    <string name="items_up_to">You can only add up to %1$d items into cart.</string>
    <string name="note">Note: Our kiosk can only accept one course registration each time for now</string>
    <string name="price">Price</string>
    <string name="total">Total (incl. GST)</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="description">Description</string>
    <string name="stt">No.</string>
    <string name="name_up">NAME</string>
    <string name="ic">IC</string>
    <string name="mobile_up">MOBILE</string>
    <string name="email">EMAIL</string>
    <string name="registering_the_course">Are you registering the course for yourself?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_or_key_in">Scan or key in attendee\'s NRIC</string>
    <string name="subtotal">Subtotal (incl. GST)</string>
    <string name="nric">NRIC</string>
    <string name="unit_number">Unit Number</string>
    <string name="verify_success">Verification is Successful</string>
    <string name="error">Error</string>
    <string name="connect_scanner">Can\'t connect to scanner</string>
    <string name="invalid_bardcode">Invalid Barcode</string>
    <string name="invalid_qrcode">Invalid QR code</string>
    <string name="invalid_token">Invalid token</string>
    <string name="invalid_card">This card has not registered before</string>
    <string name="cannot_scan">Scanner has not scan your barcode, scan again</string>
    <string name="empty_nric">Please enter or scan the PAssionCard or NRIC</string>
    <string name="promo_code">Promo Code</string>
    <string name="remove_promo">Remove</string>
    <string name="appy_promo">Apply</string>
    <string name="promo_hint">Input Promo Code</string>
    <string name="see_all_available_promo_codes">See all available promo codes</string>
    <string name="pls_input_promo_code">Please input promo code</string>
    <string name="default_promo_error">This promo code is invalid or has expired</string>
    <string name="promo_discount">Promo Code Disc</string>
    <string name="remove_promo_error">Remove promo code error. Please try again!</string>
    <string name="available_promo_codes">Select Available Promo Code</string>
    <string name="promo_code_note">Please note the only one promo code may be applied</string>
    <string name="no_promo_code_available">Sorry, there are no promo codes available at this moment</string>
    <string name="read_t_and_c">Read T&amp;Cs</string>
    <string name="term_and_condition">Term and Conditions apply</string>
    <string name="valid_till">Valid Till: %s</string>
    <string name="see_available_promo_codes">See available promo codes</string>
    <string name="request_error">Sorry, we are unable to proceed with your request at the moment. Please try again later.\n(Status Code: %d)</string>
    <string name="please_provide_email">Please provide us an email address to send your order confirmation.</string>
    <string name="email_address_hint">Email Address</string>
    <string name="email_invalid">The email address is invalid.</string>
    <string name="not_exit">* Do not exit this page</string>
    <string name="payer_name">Payer\'s Name: </string>
    <string name="attendee">Attendee</string>
    <string name="discounts">Discount ($)</string>
    <string name="prices">Price ($)</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="receive_receipt_question">Payment successful. Confirmation will be emailed to you shortly.\nDo you want a receipt?</string>
    <string name="receive_receipt_question_free">Booking successful. Confirmation will be emailed to you shortly.\nDo you want a receipt?</string>
    <string name="receive_receipt_question_free_ig">Regist successful. Confirmation will be emailed to you shortly.\nDo you want a receipt?</string>
    <string name="receive_receipt_by_email">Receive E-receipt via email</string>
    <string name="receive_receipt_by_email_hint">Type your email here</string>
    <string name="print_receipt">Or, print receipt here.</string>
    <string name="session_ending_soon">Session ending soon</string>
    <string name="extend_session_question">Do you want to extend the session?</string>
    <string name="scan_object">SCAN IC OR PASSION CARD</string>
    <string name="scan_suggest">ANIMATION LOOPING SHOWING HOW TO IC OR PASSION CARD FOR PAYMENT</string>
    <string name="result">Result: </string>
    <string name="scan_again">Scan Again</string>
    <string name="sessions_on">%d session(s) on %s (may be subject to changes)</string>
    <string name="find_your_courses_here">Find your courses here</string>
    <string name="find_your_events_here">Find your events here</string>
    <string name="select_preferred_date_hint">dd/mm/yyyy</string>
    <string name="select_locations">Select locations</string>
    <string name="select_course_categories">Select course categories</string>
    <string name="select_event_categories">Select event categories</string>
    <string name="select_suitability">Suitable for</string>
    <string name="select_preferred_day">Select preferred day</string>
    <string name="multiple_selection_is_allowed">Multiple selection is allowed</string>
    <string name="multiple_selection_is_allowed_mandatory">Multiple selection is allowed (Mandatory)</string>
    <string name="mandatory">Mandatory</string>
    <string name="wait_while_it_load">Please wait while it loads...</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="ez_link_card">EZ-Link Cards</string>
    <string name="debit_credit_cards">Debit/Credit Cards</string>
    <string name="scan_qr_code">Place QR at Scanner</string>
    <string name="scan_nric_card">Place NRIC/FIN at scanner</string>
    <string name="tab_card">Please tap card on screen</string>
    <string name="insert_card">Please insert card</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="password">Password</string>
    <string name="listings">%d listings</string>
    <string name="course_description">Course Description</string>
    <string name="event_description">Event Description</string>
    <string name="trainer_instructor">Trainer/Instructor</string>
    <string name="kiosk_activation">Kiosk Activation</string>
    <string name="pls_enter_activation_code">Please enter activation code</string>
    <string name="code">****</string>
    <string name="submit">Submit</string>
    <string name="rating_label">Please rate our eKiosk.</string>
    <string name="very_poor">Very Poor</string>
    <string name="poor">Poor</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="delete_txn">Delete Txn</string>
    <string name="txn_no">TXN No</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="completed_at">Completed At</string>
    <string name="created_at">Created At</string>
    <string name="payment_status">Payment Status</string>
    <string name="cart_id">Cart ID</string>
</resources>