<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5000000"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_30">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pls_enter_password"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_xxxlarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/dp_20" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/ButtonRedSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ok"
            android:layout_marginStart="@dimen/dp_20"/>
    </LinearLayout>
</LinearLayout>