<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_message"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingTop="40dp"
    android:paddingEnd="50dp"
    android:paddingBottom="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center"
        android:text="@string/kiosk_activation"
        android:textColor="@android:color/white"
        android:textSize="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/pls_enter_activation_code"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:hint="@string/code"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="40dp"
        tools:text="ALSDF" />

    <TextView
        android:id="@+id/txt_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_normal"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/ButtonRedSmall"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/submit" />
</LinearLayout>