<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp_10">

            <TextView
                android:id="@+id/txt_sun"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/sun"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_mon"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/mon"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_tue"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/tue"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_wed"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/wed"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_thurs"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/thurs"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_fri"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/fri"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/txt_sat"
                android:layout_width="@dimen/dp_62"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/border_white_bg_trans"
                android:fontFamily="@font/opensans_regular"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/sat"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>